@@ -6,6 +6,7 @@ Add a 2nd notifications workflow
 Ability to check permissions on kernel.request event
 Ability to add documents on absences
 Ability to change user password
+Move admin/info pages into a controller
 
 -Fixes
 Add raw filter on agent tamplates for fields services, right and skills
